# rayTracing-SDL

./: .gitmodules  CMakeLists.txt  README.md
rayTracer/src/: camera.h  constant.h  frame.h  importScene.h  light.cpp  light.h  main.cpp  material.cpp  material.h  materialf.cpp  rayTracer.cpp  rayTracer.h  renderer.h  sample.h  shape.cpp  shape.h  spectrum.cpp  spectrum.h  texture.h
rayTracer/src/utils/: constant.h  image.h  math.h  sample.h
